Vision Core.css
/* ... */
/* Tags */

section.tags {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 0 var(--post-padding);
  margin-top: .625rem;
}

section.tags:empty {
  display: none;
}

section.tags a.tag {
  display: inline-block;
  color: rgba(var(--title), 0.65);
  margin-right: 1ch;
  text-decoration: none;
}

section.tags a.tag::before {
  content: "#";
}

section.tags a.tag:hover {
  text-decoration: underline;
}

/* Pinned post label */

.pinned-post-label {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  color: rgb(var(--accent));
  filter: hue-rotate(-61deg);
  font-weight: bold;
  margin-right: 1ch;
}

.pinned-post-label svg {
  fill: rgb(var(--accent));
  margin-right: 0.5ch;
}


/* Post footer */

article footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  min-height: 28px;
  color: rgba(var(--title), 0.65);
  padding: 0 var(--post-padding);
  margin-top: .75rem;
}

article footer a {
  color: inherit;
  text-decoration: none;
}

.note-count {
  font-weight: bold;
  margin-right: var(--post-padding);
}

.timestamp {
  font-size: .875rem;
  margin-right: auto;
}

.controls {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.controls .like_button,
.controls .reblog_button {
  position: relative;
  margin-left: 12px;
}

.controls .like_button iframe,
.controls .reblog_button svg {
  opacity: 0.000000001;
  z-index: 1;
}

.controls .like_button::before,
.controls .reblog_button::before {
  position: absolute;
  top: 0;
  left: 0;
  font-family: "optica-icons";
  font-size: 28px;
  line-height: 1;
}

.controls .reblog_button::before {
  content: "\EA08";
}

.controls .like_button::before {
  content: "\EA04";
}

.controls .like_button.liked::before {
  content: "\EA05";
  color: rgb(var(--accent));
}

/* Notes */

#notes {
  max-height: 75vh;
  color: rgb(var(--title));
  background-color: rgb(var(--background));
  border-radius: 3px;
  margin-top: var(--post-margin);
  box-shadow: 0 0 1px rgba(var(--title), .13);
  overflow: auto;
}

#notes > h3 {
  position: sticky;
  top: 0;
  background-color: inherit;
  font-size: 1rem;
  text-align: center;
  padding: var(--post-vertical-spacing) var(--post-padding);
  border-bottom: 1px solid rgba(var(--title), .13);
  margin: 0;
}

ol.notes {
  display: flex;
  flex-direction: column-reverse;
  align-items: stretch;
  list-style-type: none;
  color: rgba(var(--title), 0.65);
  background-color: rgba(var(--title), .07);
  font-size: .875rem;
  padding: 0;
  margin: 0;
}

ol.notes a {
  color: inherit;
  font-weight: bold;
  text-decoration: none;
}

li.note {
  flex: none;
  padding: 1ch 1.5ch;
}

li.note a.more_notes_link {
  color: rgb(var(--accent));
}

li.note .avatar_frame {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  vertical-align: middle;
  margin-right: 1ch;
}

li.note .avatar {
  border-radius: 2px;
}

li.note span.action {
  vertical-align: middle;
}

li.note span.action a:first-of-type {
  color: rgb(var(--title));
}

li.note .answer_content {
  display: block;
}

li.note blockquote,
li.note .answer_content {
  padding-left: 10px;
  border-left: 3px solid rgba(var(--title), .25);
  margin: 10px calc(1.5rem + 1ch) 5px;
}

li.note blockquote a,
li.note .answer_content {
  color: rgb(var(--title));
  font-weight: normal;
}

li.note .retags {
  margin-left: 26px;
  margin-bottom: 0;
}

/* Secondary sidebar */

aside.secondary section {
  padding-bottom: var(--post-vertical-spacing);
}

aside.secondary h1 {
  font-size: 1.3125rem;
  font-weight: 700;
  line-height: 1.2;
  padding: .625rem;
  padding-top: 0;
  border-bottom: 2px solid rgba(var(--title), .13);
  margin: 0;
}

aside.secondary ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

aside.secondary a {
  display: flex;
  flex-direction: row;
  align-items: center;
  color: inherit;
  padding: .625rem;
}

aside.secondary a:hover {
  background-color: rgba(var(--title), .07);
}

aside.secondary a[target="_blank"]::after {
  content: "\EA01";
  color: rgba(var(--title), .65);
  font-family: "optica-icons";
  font-size: 12px;
  margin-left: auto;
}

/* Group members */

#group-members h1 {
  margin-bottom: .625rem;
}

#group-members a {
  font-size: .875rem;
}

#group-members img {
  height: 3em;
  width: 3em;
  border-radius: 3px;
  margin-right: 1ch;
}

.group-member-info {
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.group-member-info span {
  opacity: 0.65;
}

/* Credit link */

#credit {
  position: fixed;
  right: 5px;
  bottom: 5px;
  display: flex;
  flex-direction: row;
  align-items: center;
  line-height: 1;
  padding: 1ch;
  border-radius: calc(1em + 2ch);
}

#credit:hover {
  background-color: rgb(var(--background));
}

#credit span {
  font-weight: bold;
  margin-left: 0.5ch;
  margin-right: 1ch;
}

#credit:not(:hover) span {
  display: none;
}

